--- a/app.component.html
+++ b/app.component.html
@@ -1,64 +1,13 @@
 <div class="container">
-  <h1>angular pipes</h1>
-
+  <h1>angular pipes , make own</h1>
+<p>
+  {{ 4 | mult }}
+  {{ 5 | mult }}
+  {{ 3 | mult: 3}}
+</p>
+<h1>make pipe by CLI</h1>
+<p>in terminal "do command": ng g p /NAME of file/ </p>
   <p>
-     {{ e | number }}
+    {{ 'Hello World     ' | exMarks }}
   </p>
-  <p>
-    {{ e | number:'1.1-5' }}
-  </p>
-  <p>
-    {{ e | number:'3.2'}}
-  </p>
-  <p>
-    {{ str | uppercase | lowercase | titlecase}}
-  </p>
-  <p>
-    {{ str | titlecase | slice:1 }}
-  </p>
-  <p>
-    {{ str | titlecase | slice:1:5 }}
-  </p>
-  <p>
-    {{ str | titlecase | slice:1:-2 }}
-  </p>
-  <h3>Data pips</h3>
-  <p>
-    {{ Date }}
-  </p>
-  <p>
-    {{ Date | date }}
-  </p>
-  <p>
-    {{ Date | date: 'fullDate' }}
-  </p>
-  <p>
-    {{ Date | date: 'longDate' }}
-  </p>
-  <p>
-    {{ Date | date: 'long' }}
-  </p>
-  <p>
-    {{ Date | date: 'yyyy' }}
-  </p>
-  <p>
-    {{ Date | date: 'MM dd yyyy HH:mm:ss' }}
-  </p>
-  <h3>another pipe</h3>
-  <p>
-    {{ float | currency }}
-  </p>
-  <p>
-    {{ float | percent: '2.0-0'}}
-  </p>
-  <p>
-    {{ float }}
-  </p>
-  <pre>
-    {{ obj }}
-  </pre>
-  <pre>
-    {{ obj | json }}
-  </pre>
-
 </div>
